# hayk

./: .gitignore  Makefile.am  README  autogen.sh  config.h.in  configure.ac  header.txt
conf/: Makefile.am  caribou.cfg  hayk.cfg
preview/: caribou.js  hayk.js  index.html  mouse.html  request.html
src/: Makefile.am  crb_atomic.h  crb_buffer.c  crb_buffer.h  crb_channel.c  crb_channel.h  crb_client.c  crb_client.h  crb_config.c  crb_config.h  crb_crypt.c  crb_crypt.h  crb_hash.c  crb_hash.h  crb_list.c  crb_list.h  crb_log.c  crb_log.h  crb_reader.c  crb_reader.h  crb_request.c  crb_request.h  crb_sender.c  crb_sender.h  crb_server.c  crb_server.h  crb_task.c  crb_task.h  crb_worker.c  crb_worker.h  crb_ws.c  crb_ws.h  hk_channel.c  hk_channel.h  hk_config.c  hk_config.h  hk_crypt.h  hk_list.c  hk_list.h  hk_log.c  (+8 more)
src/lib/: Makefile.am  hayk.h  hk_atomic.h  hk_buffer.c  hk_buffer.h  hk_channel.h  hk_client.c  hk_client.h  hk_config.c  hk_config.h  hk_crypt.c  hk_crypt.h  hk_hash.c  hk_hash.h  hk_list.h  hk_log.c  hk_log.h  hk_reader.c  hk_reader.h  hk_request.c  hk_request.h  hk_sender.c  hk_sender.h  hk_task.c  hk_task.h  hk_worker.c  hk_worker.h  hk_ws.c  hk_ws.h
tools/: Makefile.am  crbperf.c
