noinst_LIBRARIES = libhayk.a

libhayk_a_SOURCES =   \
    hk_buffer.c       \
    hk_buffer.h       \
    hk_client.c       \
    hk_client.h       \
    hk_reader.c       \
    hk_reader.h       \
    hk_worker.c       \
    hk_worker.h       \
    hk_hash.c         \
    hk_hash.h         \
    hk_list.c         \
    hk_list.h         \
    hk_request.c      \
    hk_request.h      \
    hk_crypt.c        \
    hk_crypt.h        \
    hk_ws.c           \
    hk_ws.h           \
    hk_atomic.h       \
    hk_config.c       \
    hk_config.h       \
    hk_log.c          \
    hk_log.h          \
    hayk.h

libhayk_a_CFLAGS =       \
    -DPACKAGE_DATA_DIR=\""$(datadir)"\" \
    -DPACKAGE_LOCALE_DIR=\""$(datadir)/locale"\"\
    -DPACKAGE_CONF_FILE=\""$(sysconfdir)/hayk.cfg"\"
